# scribus-plugin-scripter-pybind11

./: README.md
python/: main.py
src/: CMakeLists.txt  plugin.cpp  plugin.h  scripter.cpp  scripter.h
src/API/: API.cpp  API.h
src/api/: api.cpp  api.h  document.cpp  document.h
