INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(SCRIBUS_SCRIPTERPYBIND11_PLUGIN_MOC_CLASSES
  plugin.h
  scripter.h
)

SET(SCRIBUS_SCRIPTERPYBIND11_PLUGIN_SOURCES
  plugin.cpp
  scripter.cpp
)

SET(SCRIBUS_SCRIPTERPYBIND11_PLUGIN "scripterpybind11")

QT5_WRAP_CPP(SCRIBUS_SCRIPTERPYBIND11_PLUGIN_MOC_SOURCES ${SCRIBUS_SCRIPTERPYBIND11_PLUGIN_MOC_CLASSES})

ADD_LIBRARY(${SCRIBUS_SCRIPTERPYBIND11_PLUGIN} MODULE ${SCRIBUS_SCRIPTERPYBIND11_PLUGIN_SOURCES} ${SCRIBUS_SCRIPTERPYBIND11_PLUGIN_MOC_SOURCES})

TARGET_LINK_LIBRARIES(${SCRIBUS_SCRIPTERPYBIND11_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_SCRIPTERPYBIND11_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)

ADD_DEPENDENCIES(${SCRIBUS_SCRIPTERPYBIND11_PLUGIN} ${EXE_NAME})
